crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_agents_dialog_open.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
you                                                                             
show┌ agents ──────────────────────────────────────────────────────────────┐    
    │> * build  The default agent. Executes tools based on configured permi│    
ganj│    plan   Plan mode. Disallows all edit tools.                       │    
One │                                                                      │    
[don│[j/k] [up/down] move   [Enter] switch   [Esc] close                   │    
@@ -│                                                                      │    
-let│                                                                      │    
+let│                                                                      │    
cont│                                                                      │    
[err│                                                                      │    
refu│                                                                      │    
    │                                                                      │    
    │                                                                      │    
    │                                                                      │    
    │                                                                      │    
    └──────────────────────────────────────────────────────────────────────┘    
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
build · ready
