crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_at_menu_shows_a_live_session_row.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ mentions ────────────────────────────────────────────────────────────────────┐
│> backend  (session) /work/backend                                            │
└──────────────────────────────────────────────────────────────────────────────┘
┌ message ─────────────────────────────────────────────────────────────────────┐
│ping @back                                                                    │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
