crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_command_menu_open.snap
---
source: crates/ganja-tui/src/app_tests.rs
expression: screen(&terminal)
---
> show me every color you have                                                  
                                                                                
● One edit applied, one command refused.                                        
● Edit(filePath: "theme.rs")                                                    
  ⎿ theme.rs                                                                    
    @@ -1,2 +1,2 @@                                                             
┌ commands ────────────────────────────────────────────────────────────────────┐
│> /compact       Summarize the conversation so far and carry on from it       │
│  /sessions      Reopen a conversation this project has stored                │
│  /skills        List the skills a $ invocation can load, and insert one      │
│  /agents        Run the rest of this session as a different agent            │
│  /context       See what fills the model's context window, estimated per cate│
│  /copy          Put the whole conversation on the clipboard, as markdown     │
│  /deadline      Tell the model how long this sitting has, so every request sa│
│  /effort        Run the model under one of its catalog efforts               │
│  /fast          Ask the rest of this session at the vendor's fast service tie│
│  /init          guided AGENTS.md setup                                       │
└──────────────────────────────────────────────────────────────────────────────┘
┌ message ─────────────────────────────────────────────────────────────────────┐
│/s                                                                            │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
