crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_context_dialog_degraded.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
  ┌ context ─────────────────────────────────────────────────────────────────┐  
  │canned · 30.0k tokens — estimated                                         │  
  │unsized model — percentages unavailable                                   │  
  │                                                                          │  
  │  █ System prompt            3.0k tokens                                  │  
  │  █ Instruction files        2.0k tokens                                  │  
  │  █ Builtin tools           11.0k tokens                                  │  
  │  █ MCP tools                1.0k tokens                                  │  
  │  █ Skills                    500 tokens                                  │  
  │  █ Messages                12.5k tokens                                  │  
  │  total                     30.0k tokens                                  │  
  │                                                                          │  
  │[Esc] close                                                               │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready                  Enter send · Alt+Enter newline · Esc cancel · Ctrl-C quit
