crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_context_dialog_open.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
                                                                                
                                                                                
  ┌ context ─────────────────────────────────────────────────────────────────┐  
  │claude-sonnet-5 · 30.0k of 100.0k tokens (30%) — estimated                │  
  │                                                                          │  
  │  ████████████████████                                                    │  
  │  ████████████████████                                                    │  
  │  ████████████████████                                                    │  
  │  ░░░░░░░░░░░░░░░░░░░░                                                    │  
  │  ░░░░░░░░░░░░░░░░░░░░                                                    │  
  │  ░░░░░░░░░░░░░░░░░░░░                                                    │  
  │  ░░░░░░░░░░░░░░░░░░░░                                                    │  
  │  ░░░░░░░░░░░░░░░░░░░░                                                    │  
  │  ░░░░░░░░░░░░░░░░░░░░                                                    │  
  │  ▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒▒                                                    │  
  │                                                                          │  
  │  █ System prompt            3.0k tokens (3.0%)                           │  
  │  █ Instruction files        2.0k tokens (2.0%)                           │  
  │  █ Builtin tools           11.0k tokens (11.0%)                          │  
  │  █ MCP tools                1.0k tokens (1.0%)                           │  
  │  █ Skills                    500 tokens (0.5%)                           │  
  │  █ Messages                12.5k tokens (12.5%)                          │  
  │  ░ Free space              60.0k tokens (60.0%)                          │  
  │  ▒ Autocompact reserve     10.0k tokens (10.0%)                          │  
  │                                                                          │  
  │[Esc] close                                                               │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready                  Enter send · Alt+Enter newline · Esc cancel · Ctrl-C quit
