crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_file_menu_open.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
you                                                                             
show me every color you have                                                    
                                                                                
ganja                                                                           
One edit applied, one command refused.                                          
[done] edit: theme.rs                                                           
@@ -1,2 +1,2 @@                                                                 
-let theme = Theme::default();                                                  
+let theme = themes.theme();                                                    
context                                                                         
[error] bash: rm -rf /                                                          
refused: destructive command                                                    
                                                                                
                                                                                
                                                                                
┌ files ───────────────────────────────────────────────────────────────────────┐
│> src/lib.rs                                                                  │
└──────────────────────────────────────────────────────────────────────────────┘
┌ message ─────────────────────────────────────────────────────────────────────┐
│compare @lib                                                                  │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready                  Enter send · Alt+Enter newline · Esc cancel · Ctrl-C quit
