crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_held_listing_open.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
  ┌ held ────────────────────────────────────────────────────────────────────┐  
  │> w1@ganja-team      no sender mode    2m  a finding worth a look         │  
  │  scribbler@nowhere  explicit         12s  an unsummarized body           │  
  │                                                                          │  
  │[j/k] [up/down] move   [Enter] choose   [Esc] close                       │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
