crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_help_dialog_open.snap
---
source: crates/ganja-tui/src/app_tests.rs
expression: screen(&terminal)
---
> show me every color you have                                                  
    ┌ help ────────────────────────────────────────────────────────────────┐    
● On│/sessions      Switch session                                   ctrl+s│    
● Ed│/new           New session                                            │    
  ⎿ │/compact       Compact session                                        │    
    │/editor        Open editor                                            │    
    │/models        Switch model                                           │    
    │/effort        Switch model effort                                    │    
    │/agents        Switch agent                                           │    
● Ba│/themes        Switch theme                                           │    
  ⎿ │/mcp           MCP servers                                            │    
    │/skills        Skills                                                 │    
    │/context       Context usage                                          │    
    │/usage         Session usage                                          │    
    │                                                                      │    
    │[up/down] scroll   [Esc] close                              1-12 of 33│    
    └──────────────────────────────────────────────────────────────────────┘    
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
