crates/ganja-tui/src/snapshots/ganja_tui__app__tests__snapshot_mcp_dialog_open.snap
---
source: crates/ganja-tui/src/app.rs
expression: screen(&terminal)
---
                                                                                
  ┌ mcp ─────────────────────────────────────────────────────────────────────┐  
  │> broken  Failed    - tools  /nonexistent-ganja-fixture could not be start│  
  │                                                                          │  
  │[j/k] [up/down] move   [Enter] actions   [Esc] close                      │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  │                                                                          │  
  └──────────────────────────────────────────────────────────────────────────┘  
                                                                                
┌ message ─────────────────────────────────────────────────────────────────────┐
│ Ask ganja something...                                                       │
│                                                                              │
│                                                                              │
└──────────────────────────────────────────────────────────────────────────────┘
ready
